{
    "name": "PuzzleInputs",
    "maps": [
        {
            "name": "PuzzleControls",
            "id": "445a4f4d-bb8a-4a1f-8bf2-bb322cad1143",
            "actions": [
                {
                    "name": "RotateCounterClockwise",
                    "type": "Button",
                    "id": "71c0c219-f998-494e-869c-8e1510a44305",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateClockwise",
                    "type": "Button",
                    "id": "861b1fd0-4c34-4d91-9cf7-6cb8b72dc21c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Value",
                    "id": "0bf5b581-fa3c-46ba-9e7f-cb9020869cff",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "31219829-052b-4260-ab78-91f16270dfb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "35a59e45-225f-49c0-be01-cda3754b94d6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCounterClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f28177e7-5667-4963-a53d-90ca750e8e4c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcc88c05-a177-4fae-8dac-cdfce1db23b0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec64e03f-6461-4dc4-9b1e-95745361c2ac",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}